[package]
name = "smbiote"
version = "1.0.0"
edition = "2021"
description = "SMBiote is an SMB scanning and exploitation tool"
license = "GPL-3.0"
authors = ["Gilles Biagomba<gilles.infosec@gmail.com>"]
repository = "https://github.com/your_github/terminus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
